images not showing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <div id="goingDown">
       <a href="#footer">
-        <img src="/img/Logos/downArrow.JPG" id="downArrow" alt="flêche pour aller en bas du site"/>
+        <img src="./img/Logos/downArrow.JPG" id="downArrow" alt="flêche pour aller en bas du site"/>
       </a>
     </div>
 
