--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
             </div>
             <div class="imgProjectCard1">
               <a href="https://lisa27kl.github.io/Projet2-Booki/" target="_blank">
-                <img src="/img/Booki/booki.JPG" class="imgProject1" alt="Capture d'écran du projet Booki"/>
+                <!-- <img src="/img/Booki/booki.JPG" class="imgProject1" alt="Capture d'écran du projet Booki"/> -->
+                <img src="https://github.com/Lisa27KL/-Lisa27KL-Mon_e-CV/blob/a02fd412dcbd001cd1cb06d828ce69567ef08ffe/img/Booki/booki.jpg" class="imgProject1" alt="Capture d'écran du projet Booki"/>
+                
               </a>
               <p class="infosImg">Passez la souris sur la photo pour que l'image s'agrandisse</p>
               <h5 class="infosImg">Cliquez sur la photo pour être dirigé vers le site</h5>
