--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <div id="goingDown">
       <a href="#footer">
-        <img src="./img/Logos/downArrow.JPG" id="downArrow" alt="flêche pour aller en bas du site"/>
+        <img src="./img/Logos/downArrow.jpg" id="downArrow" alt="flêche pour aller en bas du site"/>
       </a>
     </div>
 
@@ -42,14 +42,14 @@
           <div class="menuParts">
             <li class="menuMiniBubble">
               <a href="#introduction" class="menuLiens">
-                <img src="./img/Logos/me.JPG" class="menuPics" alt="logo"/>
+                <img src="./img/Logos/me.jpg" class="menuPics" alt="logo"/>
                 <p class="menuDetails">Qui suis-je ?</p>
               </a>
             </li>
 
             <li class="menuMiniBubble">
               <a href="#hardSkills" class="menuLiens">
-                <img src="./img/Logos/hardSkills.JPG" class="menuPics" alt="logo" />
+                <img src="./img/Logos/hardSkills.jpg" class="menuPics" alt="logo" />
                 <p class="menuDetails">Hard Skills</p>
               </a>
             </li>
@@ -58,14 +58,14 @@
           <div class="menuParts">
             <li class="menuBubble">
               <a href="#softSkills" class="menuLiens">
-                <img src="./img/Logos/softSkills.JPG" class="menuPics" alt="logo" />
+                <img src="./img/Logos/softSkills.jpg" class="menuPics" alt="logo" />
                 <p class="menuDetails">Soft Skills</p>
               </a>
             </li>
 
             <li class="menuBubble">
               <a href="#myProjects" class="menuLiens">
-                <img src="./img/Logos/careerProject.JPG" class="menuPics" alt="logo" />
+                <img src="./img/Logos/careerProject.jpg" class="menuPics" alt="logo" />
                 <p class="menuDetails">Mes Projets Professionnels</p>
               </a>
             </li>
@@ -74,14 +74,14 @@
           <div class="menuParts">
             <li class="menuBubble">
               <a href="#myCareer" class="menuLiens">
-                <img src="./img/Logos/careerPath.JPG" class="menuPics" alt="logo"/>
+                <img src="./img/Logos/careerPath.jpg" class="menuPics" alt="logo"/>
                 <p class="menuDetails">Mon Parcours Professionnel</p>
               </a>
             </li>
 
             <li class="menuBubble">
               <a href="#mesCentres" class="menuLiens">
-                <img src="./img/Logos/hobbies.JPG" class="menuPics" alt="logo" />
+                <img src="./img/Logos/hobbies.jpg" class="menuPics" alt="logo" />
                 <p class="menuDetails">Mes centres d'intérêts</p>
               </a>
             </li>
@@ -90,14 +90,14 @@
           <div class="menuParts">
             <li class="menuMiniBubble">
               <a href="#langues" class="menuLiens">
-                <img src="./img/Logos/languages.JPG" class="menuPics" alt="logo"/>
+                <img src="./img/Logos/languages.jpg" class="menuPics" alt="logo"/>
                 <p class="menuDetails">Langues</p>
               </a>
             </li>
 
             <li class="menuMiniBubble">
               <a href="#footerList" class="menuLiens">
-                <img src="./img/Logos/contact.JPG" class="menuPics" alt="logo" />
+                <img src="./img/Logos/contact.jpg" class="menuPics" alt="logo" />
                 <p class="menuDetails">Contactez-Moi</p>
               </a>
             </li>
@@ -110,7 +110,7 @@
       <section class="introductionSection">
         <div id="introduction">
           <h3 id="introTitle"> 
-            <img src="./img/Logos/me.JPG" class="menuPics" alt="logo"/> 
+            <img src="./img/Logos/me.jpg" class="menuPics" alt="logo"/> 
             Qui suis-je ?</h3>
           <p id="talk">
             Dynamique, investi, ayant la soif d'apprendre...
@@ -130,7 +130,7 @@
         <div id="hardSkills">
           <div> 
           <h3 id="hardSkillsTitle">
-            <img src="./img/Logos/hardSkills.JPG" class="menuPics" alt="logo" />
+            <img src="./img/Logos/hardSkills.jpg" class="menuPics" alt="logo" />
             Hard Skills</h3>
         </div>
         <div id="mySkills">
@@ -176,7 +176,7 @@
       <div id="softSkills">
         <div>
           <h3 id="softSkillsTitle">
-            <img src="./img/Logos/softSkills.JPG" class="menuPics" alt="logo" />
+            <img src="./img/Logos/softSkills.jpg" class="menuPics" alt="logo" />
             Soft Skills</h3>
         </div>
         <ul class="listMySoftSkills">
@@ -195,7 +195,7 @@
         <div id="myProjects">
 
           <h3 id="projectBigTitle">
-            <img src="./img/Logos/careerProject.JPG" class="menuPics" alt="logo" />
+            <img src="./img/Logos/careerProject.jpg" class="menuPics" alt="logo" />
             Mes Projets Professionnels</h3>
           <article class="projectsCards1">
             <div class="infosProjectCard1">
@@ -211,7 +211,7 @@
             </div>
             <div class="imgProjectCard1">
               <a href="https://lisa27kl.github.io/Projet2-Booki/" target="_blank">
-                <img src="./img/Booki/booki.JPG" class="imgProject1" alt="Capture d'écran du projet Booki"/>                
+                <img src="./img/Booki/booki.jpg" class="imgProject1" alt="Capture d'écran du projet Booki"/>                
               </a>
               <p class="infosImg">Passez la souris sur la photo pour que l'image s'agrandisse</p>
               <h5 class="infosImg">Cliquez sur la photo pour être dirigé vers le site</h5>
@@ -234,7 +234,7 @@
 
           <div class="imgProjectCard2">
             <a href="https://lisa27kl.github.io/KemboloLuyeyeLisa_3_22112021.github.io/index.html" target="_blank">
-              <img src="./img/OhMyFood/ohmyfood1.JPG" class="imgProject2" alt="Capture d'écran du projet OhMyGood"/>
+              <img src="./img/OhMyFood/ohmyfood1.jpg" class="imgProject2" alt="Capture d'écran du projet OhMyGood"/>
             </a>
             <p class="infosImg">Passez la souris sur la photo pour que l'image s'agrandisse</p>
             <h5 class="infosImg">Cliquez sur la photo pour être dirigé vers le site</h5>
@@ -258,7 +258,7 @@
 
           <div class="imgProjectCard3">
             <a href="https://lisa27kl.github.io/Projet-4-La-chouette-agence-apres.github.io/" target="_blank">
-              <img src="./img/LaChouetteAgence/LaChouetteAgence.JPG" class="imgProject3" alt="Capture d'écran du projet La Chouette Agence"/>
+              <img src="./img/LaChouetteAgence/LaChouetteAgence.jpg" class="imgProject3" alt="Capture d'écran du projet La Chouette Agence"/>
             </a>
             <p class="infosImg">Passez la souris sur la photo pour que l'image s'agrandisse</p>
             <h5 class="infosImg">Cliquez sur la photo pour être dirigé vers le site</h5>
@@ -280,7 +280,7 @@
 
           <div class="imgProjectCard4">
             <a href="https://github.com/Lisa27KL/Projet-Kanap-Kembolo-Luyeye_Lisa.github.io.git" target="_blank">
-              <img src="./img/Kanap/kanap1.JPG" alt="Capture d'écran du projet Kanap" class="imgProject4" />
+              <img src="./img/Kanap/kanap1.jpg" alt="Capture d'écran du projet Kanap" class="imgProject4" />
             </a>
             <p class="infosImg">Passez la souris sur la photo pour que l'image s'agrandisse</p>
             <h5 class="infosImg">Cliquez sur la photo pour être dirigé vers mon dossier github correspondant à mon site</h5>
@@ -313,7 +313,7 @@
           </div>
           <div class="imgProjectCard5">
             <a href="https://github.com/Lisa27KL/Projet-Piiquante-Kembolo-Luyeye_Lisa.github.io.git" target="_blank">
-              <img src="./img/Piiquante/piiquante1.JPG" alt="Capture d'écran du projet  Piiquante" class="imgProject5"/>
+              <img src="./img/Piiquante/piiquante1.jpg" alt="Capture d'écran du projet  Piiquante" class="imgProject5"/>
             </a>
             <p class="infosImg">Passez la souris sur la photo pour que l'image s'agrandisse</p>
             <h5 class="infosImg">Cliquez sur la photo pour être dirigé vers mon dossier github correspondant à mon site</h5>
@@ -347,7 +347,7 @@
 
           <div class="imgProjectCard6">
             <a href="https://github.com/Lisa27KL/Projet-Groupomania-Kembolo-Luyeye_Lisa.github.io.git" target="_blank">
-              <img src="./img/Groupomania/groupomania1.JPG" alt="Capture d'écran du projet Groupomania" class="imgProject6"/>
+              <img src="./img/Groupomania/groupomania1.jpg" alt="Capture d'écran du projet Groupomania" class="imgProject6"/>
             </a>
             <p class="infosImg">Passez la souris sur la photo pour que l'image s'agrandisse</p>
             <h5 class="infosImg">Cliquez sur la photo pour être dirigé vers mon dossier github correspondant à mon site</h5>
@@ -363,7 +363,7 @@
           <div class="career1">
 
             <h3 id="careerBigTitle">
-              <img src="./img/Logos/careerPath.JPG" class="menuPics" alt="logo"/> 
+              <img src="./img/Logos/careerPath.jpg" class="menuPics" alt="logo"/> 
               Mon Parcours</h3>
               
             </div>       
@@ -416,7 +416,7 @@
     
       <section id="myInterestsSection">
           <h3 id="interestsBigTitle">
-            <img src="./img/Logos/hobbies.JPG" class="menuPics" alt="logo"/>
+            <img src="./img/Logos/hobbies.jpg" class="menuPics" alt="logo"/>
             Mes centres d'intérêt</h3>
         <ul class="interests">
           <ol>
@@ -436,7 +436,7 @@
 
       <section id="languagesSection">
         <h3 id="languagesBigTitle">
-          <img src="./img/Logos/languages.JPG" class="menuPics" alt="logo"/> 
+          <img src="./img/Logos/languages.jpg" class="menuPics" alt="logo"/> 
           Langues</h3>
         <ul class="languages">
           <ol>
@@ -452,38 +452,38 @@
     </main>
     <div id="goingUp">
       <a href="#header">
-        <img src="./img/Logos/upArrow.JPG" id="upArrow" alt="flêche pour revenir vers le haut"/>
+        <img src="./img/Logos/upArrow.jpg" id="upArrow" alt="flêche pour revenir vers le haut"/>
 
       </a>
     </div>
     <footer id="footer">
       <h3 class="footerTitle">
-        <img src="./img/Logos/contact.JPG" class="menuPics" alt="logo" />
+        <img src="./img/Logos/contact.jpg" class="menuPics" alt="logo" />
         Mes Contacts</h3>
       <ul id="footerList">
         <li>
           <a href="mailto:kembololisa@gmail.com" target="_blank">
-            <img src="./img/Logos/email.JPG" class="footerLogos" alt="emailLogo"/>
+            <img src="./img/Logos/email.jpg" class="footerLogos" alt="emailLogo"/>
           </a>
         </li>
         <li>
           <a href="https://calendly.com/kembololisa/15min" target="_blank">
-            <img src="./img/Logos/calendar.JPG" class="footerLogos" alt="calendarLogo"/>
+            <img src="./img/Logos/calendar.jpg" class="footerLogos" alt="calendarLogo"/>
           </a>
         </li>
         <li>
           <a href="https://github.com/Lisa27KL" target="_blank">
-            <img src="./img/Logos/github.JPG" class="footerLogos" alt="githubLogo" />
+            <img src="./img/Logos/github.jpg" class="footerLogos" alt="githubLogo" />
           </a>
         </li>
         <li>
           <a href="http://www.linkedin.com/in/lisa-kembolo-luyeye" target="_blank">
-            <img src="./img/Logos/linkedin.JPG" class="footerLogos" alt="linkedInLogo"/>
+            <img src="./img/Logos/linkedin.jpg" class="footerLogos" alt="linkedInLogo"/>
           </a>
         </li>
         <li>
           <a href="https://twitter.com/LisaKembolo" target="_blank">
-            <img src="./img/Logos/twitter.JPG" class="footerLogos" alt="twitterLogo"/>
+            <img src="./img/Logos/twitter.jpg" class="footerLogos" alt="twitterLogo"/>
           </a>
         </li>
       </ul>
