--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       src="https://kit.fontawesome.com/4a7af62695.js"
       crossorigin="anonymous"
     ></script>
+    
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Charm&family=Merienda+One&family=Playball&family=Yeseva+One&display=swap');
+      </style>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cookie&family=Great+Vibes&family=Parisienne&display=swap"
-      rel="stylesheet"
-    />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -420,7 +421,7 @@
             Mes centres d'intérêt</h3>
         <ul class="interests">
           <ol>
-            BasketbJPG
+            Basket
           </ol>
           <ol>
             Les Gastronomies Congolaise & Marocaine
