--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         Mes Contacts</h3>
       <ul id="footerList">
         <li>
-          <a href="mailto:kembololisa@gmail.com" target="_blank">
+          <a href="mailto: kembololisa@gmail.com?Subject=Demande de renseignements">
             <img src="./img/Logos/email.jpg" class="footerLogos" alt="emailLogo"/>
           </a>
         </li>
