--- a/index.html
+++ b/index.html
@@ -483,6 +483,16 @@
           </a>
         </li>
         <li>
+          <a href="https://www.instagram.com/seemayya.dev/" target="_blank">
+            <img src="./img/Logos/instagram.png" class="footerLogos" alt="instagramLogo"/>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/profile.php?id=100085634928790" target="_blank">
+            <img src="./img/Logos/facebook.png" class="footerLogos" alt="facebookLogo"/>
+          </a>
+        </li>
+        <li>
           <a href="https://twitter.com/LisaKembolo" target="_blank">
             <img src="./img/Logos/twitter.jpg" class="footerLogos" alt="twitterLogo"/>
           </a>
