--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="menuNavBar">
       <nav class="navBar">
         <ul id="menu">
-          <div class="menuParts">
+          <ul class="menuParts">
             <li class="menuMiniBubble">
               <a href="#introduction" class="menuLiens">
                 <img src="./img/Logos/me.jpg" class="menuPics" alt="logo"/>
@@ -54,9 +54,9 @@
                 <p class="menuDetails">Hard Skills</p>
               </a>
             </li>
-          </div>
+          </ul>
 
-          <div class="menuParts">
+          <ul class="menuParts">
             <li class="menuBubble">
               <a href="#softSkills" class="menuLiens">
                 <img src="./img/Logos/softSkills.jpg" class="menuPics" alt="logo" />
@@ -70,9 +70,9 @@
                 <p class="menuDetails">Mes Projets Professionnels</p>
               </a>
             </li>
-          </div>
+          </ul>
 
-          <div class="menuParts">
+          <ul class="menuParts">
             <li class="menuBubble">
               <a href="#myCareer" class="menuLiens">
                 <img src="./img/Logos/careerPath.jpg" class="menuPics" alt="logo"/>
@@ -86,9 +86,9 @@
                 <p class="menuDetails">Mes centres d'intérêts</p>
               </a>
             </li>
-          </div>
+          </ul>
 
-          <div class="menuParts">
+          <ul class="menuParts">
             <li class="menuMiniBubble">
               <a href="#langues" class="menuLiens">
                 <img src="./img/Logos/languages.jpg" class="menuPics" alt="logo"/>
@@ -102,7 +102,7 @@
                 <p class="menuDetails">Contactez-Moi</p>
               </a>
             </li>
-          </div>
+          </ul>
         </ul>
       </nav>
     </div>
@@ -203,12 +203,12 @@
               <h4 class="projectTitle1">Booki</h4>
               <p class="projectInfos1">Sujet : Transformez une maquette en site web</p>
               <p class="projectInfos1">Langages : HTML & CSS</p>
-              <P class="projectInfos1">Explications: 
+              <p class="projectInfos1">Explications: 
                 <p class="explications">
                   La réalisation de ce premier prototype de site est basée sur une maquette représentative du site Booki. 
                   Ce travail m'a permis de découvrir le langage HTML mais aussi le CSS.
-                </P>
                 </p>
+              </p>
             </div>
             <div class="imgProjectCard1">
               <a href="https://lisa27kl.github.io/Projet2-Booki/" target="_blank">
@@ -226,9 +226,9 @@
             <p class="projectInfos2">Langages : CSS, SCSS</p>
             <p class="projectInfos2">Explications : 
               <p class="explications">Ohmyfood est le second projet que j'ai réalisé. 
-              </br>L'idée principale était de réaliser un prototype de site version mobile et version tablette.
+              <br>L'idée principale était de réaliser un prototype de site version mobile et version tablette.
                 Ayant pris mes aises avec le langage HTML et CSS, j'ai découvert le langage SCSS ainsi que les animations.
-                
+              </br>  
               </p>
             </p>
           </div>
@@ -274,8 +274,10 @@
             <p class="projectInfos4">Langages : JAVASCRIPT</p>
             <p class="projectInfos4">Explications : 
               <p class="explications"> C'est avec la découverte du JAVASCRIPT que ce site a pris jour. Ce projet consistait à créer un site e-commerce à partir du backend afin de donner naissance au frontend. 
-              </br>C'est à dire que l'API du site était déjà fournis, et il fallait donc récupérer des informations précises dans l'API à partir du frontend créé de manière coordonnée. 
-              On doit pouvoir commander un ou plusieurs article(s), faire le total des prix et valider la commande avec les informations personnelles qui doivent être sécurisée. </p>
+                <br>C'est à dire que l'API du site était déjà fournis, et il fallait donc récupérer des informations précises dans l'API à partir du frontend créé de manière coordonnée. 
+                On doit pouvoir commander un ou plusieurs article(s), faire le total des prix et valider la commande avec les informations personnelles qui doivent être sécurisée. 
+                </br>
+              </p>
             </p>
           </div>
 
@@ -332,7 +334,7 @@
             <p class="projectInfos6">Explications : 
               <p class="explications">
                 Ce site est mon bébé de A à Z. La création TOTALE de ce site est le fruit de mes efforts et reflète ma personnalité. 
-              </br>Il s'agit d'un réseau social d'entreprise permettant de:
+              <br>Il s'agit d'un réseau social d'entreprise permettant de: </br>
                 
                 <ul class="explications">
                   <li>Créer un compte et s'y connecter</li>
@@ -420,18 +422,18 @@
             <img src="./img/Logos/hobbies.jpg" class="menuPics" alt="logo"/>
             Mes centres d'intérêt</h3>
         <ul class="interests">
-          <ol>
+          <li>
             Basket
-          </ol>
-          <ol>
+          </li>
+          <li>
             Les Gastronomies Congolaise & Marocaine
-          </ol>
-          <ol>
+          </li>
+          <li>
             Les livres fantastiques
-          </ol>
-          <ol>
+          </li>
+          <li>
             Les films d'actions
-          </ol>
+          </li>
         </ul>
       </section>
 
@@ -440,12 +442,12 @@
           <img src="./img/Logos/languages.jpg" class="menuPics" alt="logo"/> 
           Langues</h3>
         <ul class="languages">
-          <ol>
+          <li>
             Français : Courant
-          </ol>
-          <ol>
+          </li>
+          <li>
             Anglais : Courant
-          </ol>
+          </li>
         </ul>
       </section>
     </div>
@@ -463,7 +465,7 @@
         Mes Contacts</h3>
       <ul id="footerList">
         <li>
-          <a href="mailto: kembololisa@gmail.com?Subject=Demande de renseignements">
+          <a href="mailto:kembololisa@gmail.com?Subject=Demande-de-renseignements">
             <img src="./img/Logos/email.jpg" class="footerLogos" alt="emailLogo"/>
           </a>
         </li>
