--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
           </a>
         </li>
         <li>
-          <a href="http://www.linkedin.com/in/lisa-kembolo-luyeye" target="_blank">
+          <a href=" https://www.linkedin.com/company/seemayya-dev/" target="_blank">
             <img src="./img/Logos/linkedin.svg" class="footerLogos" alt="linkedInLogo">
           </a>
         </li>
@@ -487,7 +487,7 @@
           </a>
         </li>
         <li>
-          <a href="https://www.facebook.com/profile.php?id=100085634928790" target="_blank">
+          <a href="https://www.facebook.com/profile.php?id=100086126494837" target="_blank">
             <img src="./img/Logos/facebook.svg" class="footerLogos" alt="facebookLogo">
           </a>
         </li>
