--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <img src="./img/Logos/me.svg" class="menuPics" alt="logo"> 
             Qui suis-je ?</h3>
           <p id="talk">
-            Dynamique, investi, ayant la soif d'apprendre...
+            Dynamique, investie, ayant la soif d'apprendre...
             <br>
             Je suis une jeune développeuse, fraîchement diplômée, qui veut
             croquer la toile à pleines dents ! 
