--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
         Mes Contacts</h3>
       <ul id="footerList">
         <li>
-          <a href="mailto:kembololisa@gmail.com?Subject=Demande-de-renseignements">
+          <a href="mailto:seemayya.dev@gmail.com?Subject=Demande-de-renseignements">
             <img src="./img/Logos/email.svg" class="footerLogos" alt="emailLogo">
           </a>
         </li>
@@ -477,7 +477,7 @@
           </a>
         </li>
         <li>
-          <a href=" https://www.linkedin.com/company/seemayya-dev/" target="_blank">
+          <a href="https://www.linkedin.com/company/seemayya-dev/" target="_blank">
             <img src="./img/Logos/linkedin.svg" class="footerLogos" alt="linkedInLogo">
           </a>
         </li>
