--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
           </a>
         </li>
         <li>
-          <a href="https://www.facebook.com/profile.php?id=100086126494837" target="_blank">
+          <a href="https://www.facebook.com/SeeMayya.dev" target="_blank">
             <img src="./img/Logos/facebook.svg" class="footerLogos" alt="facebookLogo">
           </a>
         </li>
